Fix - on hover combat log buttons are being clipped in the VTT and popout

--- a/abovevtt.css
+++ b/abovevtt.css
@@ -4877,6 +4877,8 @@ input.max_hp[disabled]{
     opacity: 1;
     color: #fff;
     pointer-events: none;
+    right: 8px;
+    border-radius: 5px;
 }
 
 .import-loading-indicator,
